Time-series bucket compression verifier function does not log all attributes on failure

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc7
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.0
    • Execution Team 2024-05-27
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If the time-series bucket compression verifier fails, we log some information for diagnostic purposes. However, we mistakenly aren't logging some of the attributes that we should be.

            Assignee:
            Gregory Noma
            Reporter:
            Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: