SERVER-90717 Log all attributes on bucket compression verifier failure (#22402) (#22784)

GitOrigin-RevId: 5a975a14ee17319b21217d2c70804bf7c5423487